# AppQt

./: App.cpp  Application.cpp  Application.hpp  BackgroundOperation.cpp  BackgroundOperation.hpp  CMakeLists.txt  Cell.cpp  Cell.h  Cell.hpp  CellState.hpp  CellWidget.cpp  CellWidget.hpp  CrashDialog.cpp  CrashDialog.hpp  CrashHandler.cpp  CrashHandler.hpp  CrashHandlerWindows.cpp  CrashHandlerWindows.hpp  Frame.cpp  Frame.hpp  FrameInputEvents.cpp  FrameInputEvents.hpp  Gui.cpp  Gui.hpp  Labels.hpp  Layout.cpp  LoadContent.cpp  LoadContent.hpp  Logic.cpp  Logic.hpp  Pool.hpp  SettingsPane.cpp  SettingsPane.hpp  StackTrace.cpp  StackTrace.hpp  Utils.cpp  Utils.hpp  WindowsErrorCodes.hpp  main.cpp  test.cpp
data/: fonts.qrc
src/minus/: App.cpp  CellState.hpp
src/minus/gui/: CellWidget.cpp  CellWidget.hpp  Colors.hpp  Frame.cpp  Frame.hpp  FrameInputEvents.cpp  FrameInputEvents.hpp  Gui.cpp  Gui.hpp  Labels.hpp  Layout.cpp  Layout.hpp
src/minus/logic/: Cell.hpp  Logic.cpp  Logic.hpp
src/utils/: Application.cpp  Application.hpp  BackgroundOperation.cpp  BackgroundOperation.hpp  ColorDialog.cpp  ColorDialog.hpp  CrashDialog.cpp  CrashDialog.hpp  CrashHandler.cpp  Debugger.cpp  Debugger.hpp  LoadContent.cpp  LoadContent.hpp  Pool.hpp  SettingsPane.cpp  SettingsPane.hpp  StackTrace.cpp  StackTrace.hpp  Utils.cpp  Utils.hpp  WindowsErrorCodes.hpp
